--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="container"></div>
     <table id="table"></table>
-    <script src="script.js" defer />
+    <script src="script.js" defer></script>
   </body>
 </html>
